Revert "fixed overlap issue"
This reverts commit bf44ac5afc1f9b1b167adc4f12c5f08bc6b5bc9b.

--- a/about.css
+++ b/about.css
@@ -72,7 +72,7 @@ header ul li a.active {
 
 .about {
     width: 100%;
-    height: 55vh;
+    height: 50vh;
     background-color: #1c0522;
     position: relative;
     justify-content: center;
@@ -104,27 +104,11 @@ header ul li a.active {
     width: 100%;
     height: 100vh;
     background-color: #1c0522;
-    position: relative;
-    display: flex;
-    padding-left: 2%;
 }
 
 .missiondescription {
-    width: 65%;
-    height: 65vh;
-    background-color: #1c0522;
-    box-shadow: 0 0 30px #fff;
-}
+    width: 50%;
+    height: 60vh;
+    background-color: #fff;
 
-.missiondescription h2 {
-    color: #fff;
-    font-size: 3vw;
-    padding: 20px 30px;
-}
-
-.missiondescription p {
-    color: #fff;
-    font-size: 1.5vw;
-    padding-left: 7%;
-    padding-right: 5%;
 }
