--- a/members.css
+++ b/members.css
@@ -11,7 +11,6 @@
 body {
     min-height: 100vh;
     overflow-x: hidden;
-    position: absolute;
 }
 
 .background {
@@ -65,7 +64,7 @@ header ul li a.active {
     width: 100%;
     top: 0;
     left: 0;
-    height: 600px;
+    height: 90vh;
     position: relative;
     /* display: flex; */
     padding: 0px;
@@ -75,7 +74,7 @@ header ul li a.active {
 
 .coachestitle {
     width: 100%;
-    height: 100px;
+    height: 10vh;
     position: absolute;
 }
 
@@ -89,8 +88,8 @@ header ul li a.active {
 .coaches {
     width: 100%;
     height: 50vh;
-    top: 150px;
-    position: absolute;
+    top: 25vh;
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -172,9 +171,9 @@ header ul li a.active {
 
 .sec2 {
     width: 100%;
-    top: 0;
+    top: 40vh;
     left: 0;
-    height: 500px;
+    height: 75vh;
     position: relative;
     display: flex;
     padding: 0px;
@@ -185,8 +184,8 @@ header ul li a.active {
 .coaches2 {
     width: 100%;
     height: 50vh;
-    top: 2vw;
-    left: 2.5%;
+    top: 5vh;
+    left: 5vh;
     position: relative;
     display: flex;
     justify-content: center;
@@ -248,9 +247,9 @@ header ul li a.active {
 }
 
 .athletes1 {
-    top: 0;
+    top: 75vh;
     left: 0;
-    height: 650px;
+    height: 95vh;
     position: relative;
     display: flex;
     padding: 0;
@@ -259,7 +258,7 @@ header ul li a.active {
 
 .athletestitle {
     color: #fff;
-    height: 100px;
+    height: 10vh;
     position: absolute;
 }
 
@@ -272,8 +271,8 @@ header ul li a.active {
 
 .athletesrow1 {
     width: 100%;
-    height: 300px;
-    top: 150px;
+    height: 50vh;
+    top: 20vh;
     position: relative;
     display: flex;
     justify-content: center;
@@ -355,9 +354,9 @@ header ul li a.active {
 }
 
 .athletes2 {
-    top: 0;
+    top: 75vh;
     left: 0;
-    height: 500px;
+    height: 75vh;
     position: relative;
     display: flex;
     padding: 0;
@@ -367,7 +366,6 @@ header ul li a.active {
 .athletesrow2 {
     width: 100%;
     height: 50vh;
-    top: 3vw;
     position: relative;
     display: flex;
     justify-content: center;
@@ -451,9 +449,9 @@ header ul li a.active {
 }
 
 .athletes3 {
-    top: 0;
+    top: 72vh;
     left: 0;
-    height: 600px;
+    height: 80vh;
     position: relative;
     display: flex;
     padding: 0;
@@ -462,7 +460,6 @@ header ul li a.active {
 
 .athletesrow3 {
     width: 100%;
-    top: 3vw;
     height: 50vh;
     position: relative;
     display: flex;
